--- a/force-app/main/default/aura/IoTImageViewer/IoTImageViewer.cmp
+++ b/force-app/main/default/aura/IoTImageViewer/IoTImageViewer.cmp
@@ -1,3 +1,9 @@
-<aura:component>
+<aura:component implements="force:appHostable,flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:hasRecordId,forceCommunity:availableForAllPageTypes,force:lightningQuickAction" access="global" >
+	<aura:registerEvent name="iotEvent" type="IotEvent"/>
+	<aura:attribute name="label" type="String" default="" access="global"/>
+	<aura:attribute name="temparature" type="Integer" default="" access="global"/>
+	<aura:handler event="IotEvent" action="{!c.handleEvent}"/>
 
-</aura:component>	
+	<ui:outputText value="{!v.label}"/>
+	<ui:outputNumber value="{!v.temparature}"/>
+</aura:component>
